fixed horizontal scroll issues

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -14,10 +14,18 @@ $color-gold: #d6ad60;
 
 // PERSONAL UTILITIES //
 
+// * {
+//   outline: 1px solid #f00 !important;
+// }
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 .color-gold {
@@ -27,15 +35,15 @@ $color-gold: #d6ad60;
 header {
   display: grid;
   grid-template-columns: 25% 1fr 25%;
-  height: 100px;
+  height: 80px;
   background-color: $color-white;
 
   .logo {
     grid-column: 1/2;
     max-width: 100%;
     align-self: center;
-    justify-self: left;
-    margin-left: 1em;
+    justify-self: start;
+    margin-left: 20px;
 
     a {
       text-decoration: none;
@@ -83,7 +91,7 @@ $text: $color-white;
   right: 0;
   top: 0;
   height: 100vh;
-  width: 80vw;
+  width: 100vw;
   transform: translate(100vw, 0);
   z-index: 100;
   opacity: 1;
@@ -169,8 +177,8 @@ input.hamburger {
 }
 
 label.hamburger {
-  justify-self: right;
-  margin-right: 2em;
+  justify-self: end;
+  margin-right: 20px;
   align-self: center;
   grid-column: 3/4;
   z-index: 9999;
@@ -213,7 +221,7 @@ label.hamburger {
 
 .landing {
   display: grid;
-  height: 80vh;
+  height: 85vh;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   justify-items: center;
@@ -343,3 +351,113 @@ label.hamburger {
 }
 
 // IMAGE CONTAINER END //
+
+// PAGE LOADER START //
+
+/* Center the loader */
+.loader-backg {
+  background-color: $color-white;
+  height: 100vh;
+  width: 100vw;
+}
+
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  margin: -76px 0 0 -76px;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid $color-gold;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1.5s;
+  animation-name: animatebottom;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes animatebottom {
+  from {
+    bottom: -100px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0px;
+    opacity: 1;
+  }
+}
+
+@keyframes animatebottom {
+  from {
+    bottom: -100px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+
+/* Add animation to "page content" */
+.animate-top {
+  position: relative;
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 1.5s;
+  animation-name: animatetop;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes animatetop {
+  from {
+    top: -100px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0px;
+    opacity: 1;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -100px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+#myDiv {
+  display: none;
+}
+
+// PAGE LOADER END //
